// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPageLifecycle createPageLifecycle Class lifeCycle  1`] = `
LoadedCheerio {
  "0": Node {
    "children": Array [
      Node {
        "data": "class组件mona",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "text",
      },
    ],
    "name": "root",
    "next": null,
    "parent": null,
    "prev": null,
    "type": "root",
  },
  "_root": LoadedCheerio {
    "0": Node {
      "children": Array [
        Node {
          "data": "class组件mona",
          "next": null,
          "parent": [Circular],
          "prev": null,
          "type": "text",
        },
      ],
      "name": "root",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`createPageLifecycle createPageLifecycle FC lifeCycle 1`] = `
LoadedCheerio {
  "0": Node {
    "children": Array [
      Node {
        "data": "fc组件mona",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "text",
      },
    ],
    "name": "root",
    "next": null,
    "parent": null,
    "prev": null,
    "type": "root",
  },
  "_root": LoadedCheerio {
    "0": Node {
      "children": Array [
        Node {
          "data": "fc组件mona",
          "next": null,
          "parent": [Circular],
          "prev": null,
          "type": "text",
        },
      ],
      "name": "root",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
